--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ httpx==0.28.1
 idna==3.11
 markdown-it-py==3.0.0
 mdurl==0.1.2
+psutil==7.1.3
 pydantic==2.12.5
 pydantic_core==2.41.5
 Pygments==2.19.2
